--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vueuse/core": "^13.0.0",
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
     "vue-draggable-next": "^2.2.1",
